--- a/web/index.html
+++ b/web/index.html
@@ -17,7 +17,7 @@
             <input type="search" id="main-search-bar"/>
         </div>
         <div id="header-button">
-            <div class="button-icon">
+            <div class="button-icon" id="button-open-terminal">
                 <img src="img/ui/terminal.png" class="button-icon-img small-button">
             </div>
 
@@ -25,14 +25,18 @@
                 <img src="img/illustrations/not-log-user.png" class="button-icon-img header-user-icon">
             </div>
 
-            <div class="button-icon">
+            <div class="button-icon" id="button-open-settings">
                 <img src="img/ui/settings.png" class="button-icon-img small-button">
             </div>
         </div>
 
     </header>
     <main>
-        <nav></nav>
+        <nav>
+            <div>
+                
+            </div>
+        </nav>
         <div id="workspace"></div>
     </main>
 
