--- a/web/index.html
+++ b/web/index.html
@@ -21,17 +21,6 @@
                 </div>
             </div>
             <div id="header-button">
-                <div class="button-icon" id="button-open-terminal">
-                    <img src="img/ui/terminal.png" class="button-icon-img small-button button-hover">
-                </div>
-
-                <div class="button-icon" class="header-user-icon">
-                    <img src="img/illustrations/not-log-user.png" class="button-icon-img header-user-icon button-hover">
-                </div>
-
-                <div class="button-icon" id="button-open-settings">
-                    <img src="img/ui/settings.png" class="button-icon-img small-button button-hover">
-                </div>
             </div>
         </div>
 
@@ -48,6 +37,7 @@
 
 </body>
 </html>
+<script language="javascript" src="js/fragments.js"></script>
 <script language="javascript" src="js/fonctions.js"></script>
 <script language="javascript" src="js/window.js"></script>
 <script language="javascript" src="js/user_data.js"></script>
