--- a/web/index.html
+++ b/web/index.html
@@ -37,6 +37,7 @@
 
 </body>
 </html>
+<script language="javascript" src="js/dependencies.js"></script>
 <script language="javascript" src="js/fonctions.js"></script>
 <script language="javascript" src="js/window.js"></script>
 <script language="javascript" src="js/user_data.js"></script>
