styles des fragments dans fichiers séparés

--- a/web/index.html
+++ b/web/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <link rel=stylesheet type="text/css" href="style.css">
+    <link rel=stylesheet type="text/css" href="styles/social_container.css">
     <link rel="shortcut icon" href="img/ui/logo_main.ico" type="image/x-icon">
     <title>chatD0s_</title>
 </head>
@@ -13,7 +14,7 @@
         <div>
             <span id="app-name">ChatD0s_</span>
         </div>
-        <div class="header-interractions">
+        <div class="header-interactions">
             <div id="main-search-bar-container">
                 <div id="main-search-bar-border">
                     <input type="search" id="main-search-bar" class="search-bar" size="25"  placeholder="le caca est cuit"/>
