--- a/web/index.html
+++ b/web/index.html
@@ -39,7 +39,15 @@
 </body>
 </html>
 <script language="javascript" src="js/dependencies.js"></script>
-<script language="javascript" src="js/fragments.js"></script>
+<script language="javascript" src="js/fragments/fragment.js"></script>
+<script language="javascript" src="js/fragments/button.js"></script>
+<script language="javascript" src="js/fragments/message.js"></script>
+<script language="javascript" src="js/fragments/social_container.js"></script>
+<script language="javascript" src="js/fragments/chat.js"></script>
+<script language="javascript" src="js/fragments/window.js"></script>
+<script language="javascript" src="js/fragments/terminal.js"></script>
+<script language="javascript" src="js/fragments/nav.js"></script>
+
 <script language="javascript" src="js/fonctions.js"></script>
 <script language="javascript" src="js/window.js"></script>
 <script language="javascript" src="js/user_data.js"></script>
