--- a/web/index.html
+++ b/web/index.html
@@ -47,6 +47,7 @@
 <script language="javascript" src="js/fragments/window.js"></script>
 <script language="javascript" src="js/fragments/terminal.js"></script>
 <script language="javascript" src="js/fragments/nav.js"></script>
+<script language="javascript" src="js/fragments/drop_down_menu.js"></script>
 
 <script language="javascript" src="js/fonctions.js"></script>
 <script language="javascript" src="js/window.js"></script>
