--- a/web/index.html
+++ b/web/index.html
@@ -40,7 +40,9 @@
 </html>
 <script language="javascript" src="js/dependencies.js"></script>
 <script language="javascript" src="js/fragments/fragment.js"></script>
-<script language="javascript" src="js/fragments/button.js"></script>
+<script language="javascript" src="js/fragments/buttons/button.js"></script>
+<script language="javascript" src="js/fragments/buttons/image_button.js"></script>
+<script language="javascript" src="js/fragments/buttons/text_button.js"></script>
 <script language="javascript" src="js/fragments/message.js"></script>
 <script language="javascript" src="js/fragments/social_container.js"></script>
 <script language="javascript" src="js/fragments/chat.js"></script>
