--- a/web/index.html
+++ b/web/index.html
@@ -50,6 +50,7 @@
 <script language="javascript" src="js/fragments/terminal.js"></script>
 <script language="javascript" src="js/fragments/nav.js"></script>
 <script language="javascript" src="js/fragments/buttons/dropdown.js"></script>
+<script language="javascript" src="js/fragments/server_container.js"></script>
 
 <script language="javascript" src="js/fonctions.js"></script>
 <script language="javascript" src="js/window.js"></script>
