--- a/web/index.html
+++ b/web/index.html
@@ -40,17 +40,12 @@
 </html>
 <script language="javascript" src="js/dependencies.js"></script>
 <script language="javascript" src="js/fragments/fragment.js"></script>
-<script language="javascript" src="js/fragments/buttons/button.js"></script>
-<script language="javascript" src="js/fragments/buttons/image_button.js"></script>
-<script language="javascript" src="js/fragments/buttons/text_button.js"></script>
-<script language="javascript" src="js/fragments/message.js"></script>
+<script language="javascript" src="js/fragments/button.js"></script>
+<script language="javascript" src="js/fragments/social_content.js"></script>
 <script language="javascript" src="js/fragments/social_container.js"></script>
-<script language="javascript" src="js/fragments/chat.js"></script>
 <script language="javascript" src="js/fragments/window.js"></script>
-<script language="javascript" src="js/fragments/terminal.js"></script>
+<script language="javascript" src="js/fragments/loader.js"></script>
 <script language="javascript" src="js/fragments/nav.js"></script>
-<script language="javascript" src="js/fragments/buttons/dropdown.js"></script>
-<script language="javascript" src="js/fragments/server_container.js"></script>
 
 <script language="javascript" src="js/fonctions.js"></script>
 <script language="javascript" src="js/window.js"></script>
